# azathoth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN_RESOLUTIONS.md  README.md  fix_imports.py  flake.nix  implementation_concerns.md  justfile  pyproject.toml  test_fallback.py  todo.md
assets/: attributions.md
assets/meta-prompt/: core-philosophy.md  d-kotlin.kt  d-python.md  d-python.py  d-readme.md  d-rust.md  d-rust.rs  directive-readme.md  directive-svelte5.md  new-version-release.md  proactive-advisor.md
assets/skills/: agent-loop.md  andrej-karpathy-skills.txt  i18n-guide.md  ts-guide-patterns.md
mcp-py/: directives.py  main_tester.py  scout.py
mcp-rs/: Cargo.toml
mcp-rs/examples/: directives.rs  main_tester.rs  prompt.rs
mcp-rs/src/: main.rs
src/azathoth/: Cargo.toml  __init__.py  config.py
src/azathoth/cli/: __init__.py  callbacks.py  commands.py  main.py
src/azathoth/cli/commands/: i18n.py  ingest.py  ls.py  workflow.py
src/azathoth/core/: directives.py  exceptions.py  i18n.py  ingest.py  llm.py  ls.py  prompts.py  scout.py  to_txt.py  tools.py  utils.py  workflow.py
src/azathoth/dev/: __init__.py  architecture_check.py  import_check.py
src/azathoth/directives/: core.toml
src/azathoth/ingest/: commands.py  core.py
src/azathoth/mcp/: i18n.py  workflow.py
src/azathoth/providers/: __init__.py  base.py  gemini.py  ollama.py  registry.py
src/azathoth/src/: main.rs
src/azathoth/src/formatter/: mod.rs
src/mcp_py/: __init__.py  pyproject.toml  scout.py  workflow.py
src/mcp_py/examples/: prompt.py  tool.py
src/mcp_py/lib/: prompt_loader.py
src/mcp_rs/: Cargo.toml
src/mcp_rs/examples/: directives.rs  main_tester.rs  prompt.rs  scout.rs  tool.rs  workflow.rs
src/mcp_rs/src/tools/: directives.rs  dt.rs  mod.rs
tests/: conftest.py
tests/core/: test_directives.py  test_i18n.py  test_ingest.py  test_llm.py  test_ls.py  test_to_txt.py  test_tools.py  test_workflow.py
tests/providers/: __init__.py  test_base.py  test_fallback.py  test_gemini.py  test_ollama.py  test_registry.py
