# axion/Cargo.toml (Main workspace manifest)

[workspace]
package.version = "0.0.1"
members = [
    "src/mcp_rs",
    # "azathoth-core",
    # "azathoth-macros"
]
resolver = "2"
exclude = [
    # python related stuff
    "mcp-py",
    "pyproject.toml",
    "uv.lock",
    # ".github",
    # "azathoth-core/*",
    # "azathoth-macros/*",
]

# ignore some of the directories...

# # COMPILE OPTIMIZATION ------------------------------------------------------------------------
[profile.dev]
opt-level = 0  # no optimizations (fastest compile time, slowest runtime)

[profile.dev.package."*"]
opt-level = 3  # Optimize the dependencies at the highest level

[profile.release]
opt-level = 3  # full optimizations
lto = true     # link-time optimizations for better runtime performance

# WORKSPACE DEPENDENCIES ---------------------------------------------------------------------
[workspace.dependencies]

# Date/time utilities
chrono = { version = "0.4.42", features = ["serde"] }
