# axion/Cargo.toml (Main workspace manifest)

[workspace]
# meta info
package.authors = ["Fernando Bryan Reza Campos <fer.rezac@outlook.com>"]
package.version = "0.0.2"
package.edition = "2024"
package.license = "MIT"
package.readme = "README.md"
package.keywords = ["ai", "mcp"]

package.repository = "https://github.com/Yrrrrrf/azathoth"
package.homepage = "https://crates.io/crates/azathoth"
package.documentation = "https://docs.rs/azathoth"

members = [
    "src/azathoth",
    "src/mcp_rs",
    # "azathoth-core",
    # "azathoth-macros"
]
resolver = "2"
exclude = [
    # python related stuff
    "mcp-py",
    "pyproject.toml",
    "uv.lock",
]

# ignore some of the directories...

# # COMPILE OPTIMIZATION ------------------------------------------------------------------------
[profile.dev]
opt-level = 0  # no optimizations (fastest compile time, slowest runtime)

[profile.dev.package."*"]
opt-level = 3  # Optimize the dependencies at the highest level

[profile.release]
opt-level = 3  # full optimizations
lto = true     # link-time optimizations for better runtime performance

# WORKSPACE DEPENDENCIES ---------------------------------------------------------------------
[workspace.dependencies]
