[project]
name = "azathoth"
version = "0.0.2"
description = "Azathoth: Dual-Protocol AI Intelligence Layer (MCP + A2A)"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
keywords = ["ai", "mcp", "a2a", "agent", "automation"]
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tiktoken>=0.12.0",
    "httpx>=0.28.1",
    "gitingest>=0.3.1",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.1.0"]
agent = ["a2a-sdk[http-server]>=0.3.24"]
clipboard = ["pyperclip>=1.11.0"]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "pyright>=1.1.408",
]

[project.scripts]
az = "azathoth.cli.main:app"
azathoth = "azathoth.cli.main:app"

[tool.pyright]
include = ["src/azathoth"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
