[project]
name = "azathoth"
version = "0.0.1"
description = "Azathoth: Dual-Protocol AI Intelligence Layer (MCP + A2A)"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
keywords = ["ai", "mcp", "a2a", "agent", "automation"]
dependencies = [
    "rich>=15.0.0",
    "typer>=0.24.1",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "tiktoken>=0.12.0",
    "httpx>=0.28.1",
    "gitingest>=0.3.1",
    "google-genai>=1.73.1",
    "fastmcp>=3.2.4",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
agent = ["a2a-sdk[http-server]>=0.3.24"]
clipboard = ["pyperclip>=1.11.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "pyright>=1.1.408",
]

[project.scripts]
az = "azathoth.cli.main:app"
azathoth = "azathoth.cli.main:app"
workflow = "azathoth.mcp.workflow:run"

[tool.pyright]
include = ["src/azathoth"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
