[project]
name = "azathoth"
version = "0.0.2"
description = "Azathoth: Dual-Protocol AI Intelligence Layer (MCP + A2A)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
keywords = ["ai", "mcp", "a2a", "agent", "automation"]
dependencies = [
    "rich>=15.0.0",
    "typer>=0.25.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tiktoken>=0.12.0",
    "httpx>=0.28.1",
    "gitingest>=0.3.1",
    "google-genai>=1.73.1",
    "fastmcp>=3.2.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[project.urls]
Homepage = "https://github.com/Yrrrrrf/azathoth"
Repository = "https://github.com/Yrrrrrf/azathoth"
# Documentation = "https://github.com/Yrrrrrf/azathoth#readme"

[project.optional-dependencies]
agent = ["a2a-sdk[http-server]>=0.3.24"]
clipboard = ["pyperclip>=1.11.0"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0"]

[project.scripts]
azathoth = "azathoth.cli.main:app"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
