[package]
name = "mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
project-root = "0.2.2"
rmcp = { version = "0.8.0", features = ["transport-io"] }
schemars = "1.0.4"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
