[project]
name = "mcp-py"
authors = [
	{ name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
version = "0.0.1"
description = "MCP-PY: A Python implementation of the MCP (Model Control Protocol) client."
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
	"ai",
	"mcp",
	"deep learning"
]