[package]
name = "mcp-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
project-root = "0.2.2"
rmcp = { version = "0.8.1", features = ["transport-io", "client"] }
schemars = "1.0.4"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
chrono.workspace = true
