[package]
name = "mcp-rs"
description = "MCP-RS: A Rust implementation of the MCP (Model Control Protocol) client."
version = "0.0.1"
# version = {workspace = true }
edition = {workspace = true }
authors = {workspace = true }
license = {workspace = true }
readme = {workspace = true }
keywords = {workspace = true }

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
project-root = "0.2.2"
rmcp = { version = "0.14.0", features = ["transport-io", "client"] }
schemars = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
chrono ={ version = "0.4.43", features = ["serde"] }
paste ={ version = "1.0.15" }
tempfile = "3.24.0"
